--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -5,7 +5,7 @@
 /* El header usa el mismo fondo del layout
    y centra el contenido principal */
 .layout-header {
-  background-color: #020617;
+  background-color: #0c1c5b;
   padding: 0.75rem 2.5rem;   /* un poco más de aire lateral */
   display: flex;
   justify-content: center;
@@ -44,13 +44,13 @@
 
 /* “Píldora” que contiene los tabs */
 .nav-pill {
-  background-color: #020617; /* mismo color que el fondo */
+  /*background-color: #020617; /* mismo color que el fondo */
   border-radius: 999px;
   padding: 0.5rem 1.6rem;
   display: flex;
   align-items: center;
   gap: 1.5rem;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.35);
+  /*box-shadow: 0 10px 30px rgba(0, 0, 0, 0.35);*/
 }
 
 /* Cada tab */
@@ -164,6 +164,7 @@
 @media (max-width: 768px) {
   .layout-header {
     padding: 0;
+    background-color: #0c1c5b;
   }
 
   .nav-bar {
@@ -185,7 +186,6 @@
     width: 100%;
     border-radius: 0;
     padding: 0.25rem 0;
-    box-shadow: 0 -3px 10px rgba(0, 0, 0, 0.6);
     justify-content: space-around;
     gap: 0;
   }
