--- a/src/styles/formNegocio.css
+++ b/src/styles/formNegocio.css
@@ -16,7 +16,7 @@ html, body {
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden; /* Adiós barra de scroll del navegador */
+   /* Adiós barra de scroll del navegador */
 }
 
 * { box-sizing: border-box; }
